# PD-REST-Python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ENDPOINTS.md  USAGE_GUIDE.md
examples/paldefender_cli/: .env.example  README.md  main.py
src/PalDefender/: __init__.py  client.py  errors.py  models.py
src/PalDefender/pal_constants/: __init__.py  items.py  pals.py  passives.py  recipes.py  skills.py  technology.py
src/paldefender_cli/: __init__.py  cli.py
tests/: test_client.py  test_paldefender_cli.py
