[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "paldefender-rest-client"
version = "0.1.0"
description = "Python client for the PalDefender REST API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Svend" }
]
keywords = ["paldefender", "palworld", "rest", "api", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.31.0,<3"
]

[project.urls]
Homepage = "https://github.com/"
Documentation = "https://github.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/PalDefender"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml"
]
